added some stuff

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -57,24 +57,24 @@
             <!--1------------->
             <div class="box-1">
                 <span><i class="fa-solid fa-plane"></i></span>
-                <p class="heading">Travel</p>
+                <p class="heading">Tourist</p>
                 <p class="details">In Asia</p>
-                <a href="#">
+                <a href="/travel">
                     <button>Learn More</button>
                 </a>
             </div>
             <!--2------------->
             <div class="box-2">
-                <span><i class="fa-solid fa-mountain-city"></i></span>
-                <p class="heading">Site Seeing</p>
+                <span><i class="fas fa-crow"></i></span>
+                <p class="heading">Birds</p>
                 <p class="details">In Asia</p>
-                <a href="#">
+                <a href="/birds">
                     <button>Learn More</button>
                 </a>
             </div>
             <!--3------------->
             <div class="box-3">
-                <span><i class="fas fa-crow"></i></span>
+                <span><i class="fa-solid fa-mountain-city"></i></span>
                 <p class="heading">Birds</p>
                 <p class="details">In Asia</p>
                 <a href="/birds">
