css changes and bird images

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -57,7 +57,7 @@
             <!--1------------->
             <div class="box-1">
                 <span><i class="fa-solid fa-plane"></i></span>
-                <p class="heading">Tourist</p>
+                <p class="heading">Tourist Attractions</p>
                 <p class="details">In Asia</p>
                 <a href="/travel">
                     <button>Learn More</button>
@@ -75,9 +75,9 @@
             <!--3------------->
             <div class="box-3">
                 <span><i class="fa-solid fa-mountain-city"></i></span>
-                <p class="heading">Birds</p>
+                <p class="heading">Places To Stay</p>
                 <p class="details">In Asia</p>
-                <a href="/birds">
+                <a href="/travel">
                     <button>Learn More</button>
                 </a>
             </div>
