--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -42,15 +42,18 @@ ul{
 h1{
     font-family: 'Roboto', sans-serif;
     font-size: 2.5rem;
+     color: #551a8b;
 }
 
 h2{
      font-family: 'Roboto', sans-serif;
+     color: #551a8b;
 }
 
 h3{
      font-family: 'Roboto', sans-serif;
     font-size: 1.3rem;
+     color: #551a8b;
 }
 
 button.btn{
@@ -315,6 +318,50 @@ main .range {
 }
 /*-------x---------main content-------------*/
 
+.bird{
+    margin: 1em 1em 1em 1em;
+
+}
+.bird > h3{
+    bottom-margin: 1em;
+    text-align: center;
+    color: #551a8b;
+}
+.bird img{
+   height: 300px;
+    width: 300px;
+    object-fit: cover;
+    margin: 1em 1em 1em 1em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.birds {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
+ }
+
+ .bird img{
+     margin: 1em 1em;
+     border-radius: 12px;
+     padding: 0;
+
+ }
+
+ .bird {
+    flex: 0 0 300px;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000,
+    5px 5px 15px 5px rgba(0,0,0,0);
+    box-shadow: 0px 10px 13px -7px #000000,
+    5px 5px 15px 5px rgba(0,0,0,0);
+
+ }
 
 /*-----------------about us---------------------*/
 
@@ -327,6 +374,10 @@ main .range {
     max-width: 400px;
     object-fit: cover;
     margin: 1em 1em 1em 1em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -415,4 +466,3 @@ footer p strong {
 .social-icons{
     margin-left: 5rem;
 }
-
