--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -91,7 +91,7 @@
 
             <ul>
                 <li>Bird watching is in its most basic form is observing any activity wherein
-                    birds are envolved in for recreaction or citizen science.</li>
+                    birds are involved in for recreation or citizen science.</li>
                 <li>Many watch for recreation or because of their fascination of the species.</li>
                 <li>Others do it for science and record their behavior.</li>
                 <li>You can watch birds with the naked eye, some prefer to use binoculars or telescopes.</li>
