--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -43,90 +43,148 @@
 
 <!--X---------------main----------------------->
 <main>
-    <div class="title">About Us</div>
-    <div class="content range">
-        <div class="cards">
 
-            <div class="card">
-            <img src="./images/Adam.jpg" alt="" width="250"  class="img-left">
-            <p>from Columbus, OH interested in PC gaming and RC cars</p>
             </div>
-            <div class="card">
-            <img src="./images/Hailey.jpg" alt="" width="250"  class="img-left">
-            <p>from Columbus, OH interested in live music</p>
+                <div class="mission">
+                    <h1>Mission Statement<hr></h1>
+                                <h3>Every avid birder wants to fulfill the dream of going on a birding excursion,
+                                                so they check out birding tours. They relish the prospect of interacting with
+                                                other bird lovers from all over the world.
+                                </h3>
+                                <p>In fact, some of these touring businesses specialize in specific regions of the world
+                                and cater to birders of all levels, from beginners to experts.<br><br>
+
+                                There are bird watching tours going to just about every corner of the world. Y
+                                ou can find these birding trips to destinations all over the U.S., Israel,
+                                South America, Alaska, Hawaii, New Zealand, Trinidad & Tobago, and Madeira to list
+                                just a few.<br><br>
+
+                                You name a place and more than likely there’s a gathering of bird watchers going there.
+                                Tours for bird enthusiasts are arranged even for remote places like Morocco, Coastal Kenya,
+                                Botswana, Madagascar, Mozambique, Falkland Islands and many, many more.<br><br>
+
+                                There are agencies that offer photo combination bird and nature tours where you visit
+                                birds and animals in their natural habitats. One such company, Exotic Birding, states
+                                that their photo tours “differ from traditional nature photo workshops in that there
+                                is no classroom instruction or formal critique of participant photographs. Instead,
+                                we concentrate our efforts on making environmental portraits, that is, portraits of
+                                birds and animals in their natural environments.”<br><br>
+                                <div class="y-separation center"><img src="./images/peroquet.jpg" alt="" class="y-separation"></div>
+                                </p>
+                            </div>
+
             </div>
-            <div class="card">
-            <img src="./images/Hakan.jpg" alt="" width="250"  class="img-left">
-            <p>from Independence, Ky interested in nature</p>
+
+<!--    <div class="title">About Us</div>-->
+<!--    <div class="content range">-->
+<!--        <div class="cards">-->
+
+<!--            <div class="card">-->
+<!--                <img src="./images/Adam.jpg" alt="" width="250"  class="img-left">-->
+<!--                <p>from Columbus, OH interested in PC gaming and RC cars</p>-->
+<!--            </div>-->
+<!--            <div class="card">-->
+<!--                <img src="./images/Hailey.jpg" alt="" width="250"  class="img-left">-->
+<!--                <p>from Columbus, OH interested in live music</p>-->
+<!--            </div>-->
+<!--            <div class="card">-->
+<!--                <img src="./images/Hakan.jpg" alt="" width="250"  class="img-left">-->
+<!--                <p>from Independence, Ky interested in nature</p>-->
+<!--            </div>-->
+<!--            <div class="card">-->
+<!--                <img src="./images/Louis.jpg" alt="" width="250"  class="img-left">-->
+<!--                <p>from Columbus, OH interested in</p>-->
+<!--            </div>-->
+<!--            <div class="card">-->
+<!--                <img src="./images/Mark.jpg" alt="" width="250"  class="img-left">-->
+<!--                <p>from Cleveland, OH interested in</p>-->
+<!--            </div>-->
+
+            <div class="team">
+                <h1> Our Team<hr></h1>
+
+
+
+                <div  class="card">
+                    <div class="circle-container">
+                        <h1><img src="./images/Adam.jpg"alt="" width="200"></h1>
+                    </div>
+                    <h2>Adam Ackley</h2>
+                    <h4>Full Stack Developer</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+
+
+
+                <div class="card">
+                    <div class="circle-container">
+                        <h1><img src="./images/Hailey.jpg"alt="" width="200"></h1>
+                    </div>
+                    <h2>Hailey Fate</h2>
+                    <h4>Full Stack Developer</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+
+
+
+                <div class="card">
+                    <div class="circle-container">
+                        <h1><img src="./images/Hakan.jpg"alt="" width="200"></h1>
+                    </div>
+                    <h2>Hakan Celik</h2>
+                    <h4>Full Stack Developer</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+
+
+
+                <div class="card">
+                    <div class="circle-container">
+                        <h1><img src="./images/Louis.jpg"alt="" width="200"></h1>
+                    </div>
+                    <h2>Louis Tchamda</h2>
+                    <h4>Full Stack Developer</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+
+                <div class="card">
+                    <div class="circle-container">
+                        <h1><img src="./images/Mark.jpg"alt="" width="200"></h1>
+                    </div>
+                    <h2>Mark Sypniewski</h2>
+                    <h4>Full Stack Developer</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
             </div>
-            <div class="card">
-            <img src="./images/Louis.jpg" alt="" width="250"  class="img-left">
-            <p>from Columbus, OH interested in</p>
-            </div>
-            <div class="card">
-            <img src="./images/Mark.jpg" alt="" width="250"  class="img-left">
-            <p>from Cleveland, OH interested in</p>
-            </div>
+                <!--X---------------footer----------------------->
+                <div class="title">Popular Destinations</div>
+                <div class="box-container-country">
+                                <!--1------------->
+                                <div class="box-country"  th:each="country :${countries}">
+                                                <span><i class="fa fa-map-marker"></i></span>
+                                                <p class="heading" th:text="${country.countryName}"></p>
+                                                <p class="details" th:text="${country.region}"></p>
+                                                <p class="details" th:text="${country.habitat}"></p>
 
-        </div>
-        <div>
-            <h3>Every avid birder wants to fulfill the dream of going on a birding excursion,
-                so they check out birding tours. They relish the prospect of interacting with
-                other bird lovers from all over the world.
-            </h3>
-            <p>In fact, some of these touring businesses specialize in specific regions of the world
-                and cater to birders of all levels, from beginners to experts.<br><br>
+                                                <a th:href=" '/countries/' + ${country.id} " > <button th:text="'Learn More'"></button></a>
 
-                There are bird watching tours going to just about every corner of the world. Y
-                ou can find these birding trips to destinations all over the U.S., Israel,
-                South America, Alaska, Hawaii, New Zealand, Trinidad & Tobago, and Madeira to list
-                just a few.<br><br>
-
-                You name a place and more than likely there’s a gathering of bird watchers going there.
-                Tours for bird enthusiasts are arranged even for remote places like Morocco, Coastal Kenya,
-                Botswana, Madagascar, Mozambique, Falkland Islands and many, many more.<br><br>
-
-                There are agencies that offer photo combination bird and nature tours where you visit
-                birds and animals in their natural habitats. One such company, Exotic Birding, states
-                that their photo tours “differ from traditional nature photo workshops in that there
-                is no classroom instruction or formal critique of participant photographs. Instead,
-                we concentrate our efforts on making environmental portraits, that is, portraits of
-                birds and animals in their natural environments.”<br><br>
-            <div class="y-separation center"><img src="./images/peroquet.jpg" alt="" class="y-separation"></div>
-            </p>
-        </div>
-
-    </div>
-
-    <div class="title">Popular Destinations</div>
-    <div class="box-container-country">
-        <!--1------------->
-        <div class="box-country"  th:each="country :${countries}">
-            <span><i class="fa fa-map-marker"></i></span>
-            <p class="heading" th:text="${country.countryName}"></p>
-            <p class="details" th:text="${country.region}"></p>
-            <p class="details" th:text="${country.habitat}"></p>
-
-            <a th:href=" '/countries/' + ${country.id} " > <button th:text="'Learn More'"></button></a>
-
-        </div>
-    </div>
+                                            </div>
+                            </div>
 </main>
 
-<!--X---------------footer----------------------->
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-1">
-                <h6>
-                    Jac <strong>Enterprise</strong>
-                </h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quaerat inventore,
-                    excepturi esse voluptates et quae ut optio quibusdam,
-                </p>
-                <p>eligendi libero modi nisi aut veniam obcaecati? Dolorem minima quae dolore!</p>
-                <p>©2022 Copyright WCCI Team 2</p>
-            </div>
+            <footer>
+                <div class="container">
+                                <div class="row">
+                                                <div class="col-md-1">
+                                                                <h6>
+                                                                                Jac <strong>Enterprise</strong>
+                                                                </h6>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quaerat inventore,
+                                                                excepturi esse voluptates et quae ut optio quibusdam,
+                                                                </p>
+                                                                <p>eligendi libero modi nisi aut veniam obcaecati? Dolorem minima quae dolore!</p>
+                                                                <p>©2022 Copyright WCCI Team 2</p>
+                                                            </div>
             <div class="col-md-1">
                 <div class="address">
                     <h6>
