--- a/src/main/resources/templates/bird.html
+++ b/src/main/resources/templates/bird.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-          crossorigin="anonymous" />
+          crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/aba5373111.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css">
@@ -24,7 +24,7 @@
                 <ul class="nav-items">
                     <li class="nav-link"><a href="/">Home</a></li>
                     <li class="nav-link"><a href="/about-us">About Us</a></li>
-                    <li class="nav-link" ><a href="/countries">Countries</a></li>
+                    <li class="nav-link"><a href="/countries">Countries</a></li>
                     <li class="nav-link"><a href="/regions">Regions</a></li>
                     <li class="nav-link"><a href="/birds">Birds</a></li>
                     <li class="nav-link"><a href="/travel">Travel</a></li>
@@ -39,60 +39,66 @@
     </nav>
 
     <!--X----------------Nav Bar----------------------->
-</header>
+    <header>
+        <h1 th:text="'Bird: '+ ${bird.birdName} "></h1>
+    </header>
+
+    </main>
+    <img th:src="'.' + ${bird.imageUrl}">
+    <h2 th:text="'Description: '+ ${bird.description}"></h2>
 
 
+    </main>
 
 
-
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-1">
-                <h6>
-                    Jac <strong>Enterprise</strong>
-                </h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quaerat inventore,
-                    excepturi esse voluptates et quae ut optio quibusdam,
-                </p>
-                <p>eligendi libero modi nisi aut veniam obcaecati? Dolorem minima quae dolore!</p>
-                <p>©2022 Copyright WCCI Team 2</p>
-            </div>
-            <div class="col-md-1">
-                <div class="address">
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-1">
                     <h6>
-                        contact info
+                        Jac <strong>Enterprise</strong>
                     </h6>
-                    <div>
-
-                        <p> <strong>Address</strong><br> bird paradise <br> 120 ca 15th avenue-suite, usa</p>
-                    </div>
-                    <div>
-
-                        <p>
-                            <strong>
-                                Phone number
-                            </strong><br>+91 999999999</p>
-                    </div>
-                    <div>
-
-                        <p><strong>Email address</strong> <br> support@birds.com</p>
-                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quaerat inventore,
+                        excepturi esse voluptates et quae ut optio quibusdam,
+                    </p>
+                    <p>eligendi libero modi nisi aut veniam obcaecati? Dolorem minima quae dolore!</p>
+                    <p>©2022 Copyright WCCI Team 2</p>
                 </div>
+                <div class="col-md-1">
+                    <div class="address">
+                        <h6>
+                            contact info
+                        </h6>
+                        <div>
 
-            </div>
-            <div class="col-md-1">
-                <h6>
-                    follow us
-                </h6>
-                <div class="social-icons">
-                    <a><i class="fab fa-facebook"></i></a>
-                    <a><i class="fab fa-twitter"></i></a>
-                    <a><i class="fab fa-instagram"></i></a>
+                            <p><strong>Address</strong><br> bird paradise <br> 120 ca 15th avenue-suite, usa</p>
+                        </div>
+                        <div>
+
+                            <p>
+                                <strong>
+                                    Phone number
+                                </strong><br>+91 999999999</p>
+                        </div>
+                        <div>
+
+                            <p><strong>Email address</strong> <br> support@birds.com</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-1">
+                    <h6>
+                        follow us
+                    </h6>
+                    <div class="social-icons">
+                        <a><i class="fab fa-facebook"></i></a>
+                        <a><i class="fab fa-twitter"></i></a>
+                        <a><i class="fab fa-instagram"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 </body>
 </html>
