fixed up content on footer and countries

--- a/src/main/resources/templates/bird.html
+++ b/src/main/resources/templates/bird.html
@@ -52,10 +52,9 @@
                 <h6>
                     Jac <strong>Enterprise</strong>
                 </h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quaerat inventore,
-                    excepturi esse voluptates et quae ut optio quibusdam,
+                <p>Our mission at Jac Enterprise is the conservation of birds and their habitats.
                 </p>
-                <p>eligendi libero modi nisi aut veniam obcaecati? Dolorem minima quae dolore!</p>
+                <p> Together, we are improving native bird populations, the land and the lives of people.</p>
                 <p>©2022 Copyright WCCI Team 2</p>
             </div>
             <div class="col-md-1">
@@ -65,7 +64,7 @@
                     </h6>
                     <div>
 
-                        <p> <strong>Address</strong><br> bird paradise <br> 120 ca 15th avenue-suite, usa</p>
+                        <p> <strong>Address</strong><br> Bird Paradise <br> 120 ca 15th avenue-suite, usa</p>
                     </div>
                     <div>
 
@@ -76,7 +75,7 @@
                     </div>
                     <div>
 
-                        <p><strong>Email address</strong> <br> support@birds.com</p>
+                        <p><strong>Email address</strong> <br> support@JEbirds.com</p>
                     </div>
                 </div>
 
