--- a/src/main/resources/templates/countries.html
+++ b/src/main/resources/templates/countries.html
@@ -43,7 +43,20 @@
 
 <!--X---------------main----------------------->
 <main>
-    <div class="title">Countries</div>
+    <div class="countries">
+        <h1>India<hr></h1>
+        <p>India is one of the greatest places in the world to see birds. India has more than 1250 species of birds in different parts
+            of the country. Indian wildlife has its fair share of native birds along with the migratory birds. Several hundred species
+            of birds can be spotted across the indian subcontinent.</p>
+        <h1>Thailand<hr></h1>
+        <p>Thailand is justifiably the most popular country for birdwatching in South-East Asia. 1049 species that have been recorded
+            in the country to date, including the 20 species endemic or near-endemic to Thailand.</p>
+        <div class="y-separation center"><img src="./images/peroquet.jpg" alt="" class="y-separation"></div>
+
+    </div>
+
+    </div>
+
     <div class="box-container-country">
         <!--1------------->
         <div class="box-country"  th:each="country :${countries}">
@@ -66,10 +79,9 @@
                 <h6>
                     Jac <strong>Enterprise</strong>
                 </h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quaerat inventore,
-                    excepturi esse voluptates et quae ut optio quibusdam,
+                <p>Our mission at Jac Enterprise is the conservation of birds and their habitats.
                 </p>
-                <p>eligendi libero modi nisi aut veniam obcaecati? Dolorem minima quae dolore!</p>
+                <p> Together, we are improving native bird populations, the land and the lives of people.</p>
                 <p>©2022 Copyright WCCI Team 2</p>
             </div>
             <div class="col-md-1">
@@ -79,7 +91,7 @@
                     </h6>
                     <div>
 
-                        <p> <strong>Address</strong><br> bird paradise <br> 120 ca 15th avenue-suite, usa</p>
+                        <p> <strong>Address</strong><br> Bird Paradise <br> 120 ca 15th avenue-suite, usa</p>
                     </div>
                     <div>
 
@@ -90,7 +102,7 @@
                     </div>
                     <div>
 
-                        <p><strong>Email address</strong> <br> support@birds.com</p>
+                        <p><strong>Email address</strong> <br> support@JEbirds.com</p>
                     </div>
                 </div>
 
