--- a/src/main/resources/templates/regions.html
+++ b/src/main/resources/templates/regions.html
@@ -43,7 +43,14 @@
 
 <!--X---------------main----------------------->
 <main>
-    <div class="title">Regions</div>
+    <div class="regions">
+        <h1>Asia<hr></h1>
+        <p>Asia is the Earth's largest continent with about 3824 species of birds. Birds are the most diversity of species in the world
+            Asia has very marked differences in attitude towards the wild world in general and birds in particular. Even where there are large
+            national parks and reverence for wildlife. Below are some common regions to explore birds.</p>
+        <div class="y-separation center"><img src="./images/peroquet.jpg" alt="" class="y-separation"></div>
+
+    </div>
     <div class="box-container-country">
         <!--1------------->
         <div class="box-country"  th:each="regiona :${regions}">
